[tool.poetry]
name = "yapa"
version = "0.1.0"
description = "yet another python assertion library"
authors = ["Peter Wu <peteeelol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
